<resources>
    <string name="app_name">TaipeiZoo</string>

    <string name="title_house">台北市立動物園</string>

    <!--fragment_house_detail-->
    <string name="open_url">在網頁開啟</string>
    <string name="plant_info">植物資料</string>
    <string name="no_plant">本館無展出植物</string>

    <!--fragment_plant_detail-->
    <string name="alias">別名</string>
    <string name="introduction">簡介</string>
    <string name="recognize_method">辨認方式</string>
    <string name="function">功能性</string>
    <string name="last_update">最後更新：</string>
</resources>
