<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextPlantDetail"
                    android:id="@+id/txt_name" />

                <TextView
                    style="@style/TextPlantDetail"
                    android:id="@+id/txt_name_english" />

                <TextView
                    android:layout_marginTop="16dp"
                    style="@style/TextPlantDetail"
                    android:text="@string/alias" />

                <TextView
                    style="@style/TextPlantDetail"
                    android:id="@+id/txt_alias" />

                <TextView
                    android:layout_marginTop="16dp"
                    style="@style/TextPlantDetail"
                    android:text="@string/introduction" />

                <TextView
                    style="@style/TextPlantDetail"
                    android:id="@+id/txt_location" />

                <TextView
                    android:layout_marginTop="16dp"
                    style="@style/TextPlantDetail"
                    android:text="@string/recognize_method" />

                <TextView
                    style="@style/TextPlantDetail"
                    android:id="@+id/txt_recognize_method" />

                <TextView
                    android:layout_marginTop="16dp"
                    style="@style/TextPlantDetail"
                    android:text="@string/function" />

                <TextView
                    style="@style/TextPlantDetail"
                    android:id="@+id/txt_function" />

                <TextView
                    android:layout_marginTop="16dp"
                    android:id="@+id/txt_last_update"
                    style="@style/TextPlantDetail"
                    android:text="@string/last_update" />
            </LinearLayout>

            <View
                android:background="@color/gray_e0"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>